Bug 105160 - libinput crashes GNOME shell with gnome-shell: ../libinput-1.10.0/src/evdev-mt-touchpad-tap.c:1073: tp_tap_handle_state: Assertiontp->tap.nfingers_down <= tp->nfingers_down' failed.
Summary: libinput crashes GNOME shell with gnome-shell: ../libinput-1.10.0/src/evdev-m...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-19 11:25 UTC by Jonathon Kowalski
Modified: 2018-02-25 22:29 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-record (56.77 KB, text/plain)
2018-02-19 11:25 UTC, Jonathon Kowalski
Details

Description Jonathon Kowalski 2018-02-19 11:25:02 UTC
Created attachment 137436 [details]
evemu-record

GNOME Shell crashes with libinput 1.10 with the following log message:

gnome-shell: ../libinput-1.10.0/src/evdev-mt-touchpad-tap.c:1073: tp_tap_handle_state: Assertiontp->tap.nfingers_down <= tp->nfingers_down' failed.

logs of the GNOME crash: http://dpaste.com/1ZM8CFV.txt

evemu-record is attached.
Comment 1 tpxp 2018-02-19 11:46:42 UTC
Hello,

Same problem here running ArchLinux with kernel : 4.15.3-2-ARCH #1 SMP PREEMPT Thu Feb 15 00:13:49 UTC 2018 x86_64 GNU/Linux
Here are the lines in my system log : http://dpaste.com/2RYPNHB
Comment 2 Peter Hutterer 2018-02-20 01:31:38 UTC
Caused by the event frame in 0.347554, the reason is a disagreement on what is a touch between the main touchpad code (which handles pressure-based touch detection) and the tapping code (which only goes by touch begin events)
Comment 4 Vishal 2018-02-20 15:46:39 UTC
Can confirm the same problem. Crashing Gnome about every hour, and the same error messages show up.

Arch Linux 4.15.3-2-zen #1 ZEN SMP PREEMPT Thu Feb 15 00:13:42 UTC 2018 x86_64 GNU/Linux

GNOME Shell 3.26.2

Name            : libinput
Version         : 1.10.0-1
Architecture    : x86_64
URL             : https://www.freedesktop.org/wiki/Software/libinput/
Depends On      : mtdev  systemd  libevdev  libwacom
Required By     : clutter  mutter  qt5-base  xf86-input-libinput

Name            : xf86-input-libinput
Version         : 0.26.0-1
Architecture    : x86_64
URL             : http://xorg.freedesktop.org/
Groups          : xorg-drivers
Depends On      : libinput>=1.2.0
Required By     : xorg-server
Comment 6 Peter Hutterer 2018-02-20 22:00:12 UTC
did you test the patch linked to in comment 3?
Comment 7 Peter Hutterer 2018-02-21 22:29:22 UTC
commit 01a633b6ebea514cc26bb00f2bf85789fe5409e3
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Tue Feb 20 13:27:57 2018 +1000

    touchpad: only begin fake touches when we have at least one finger down
Comment 8 Lucas De Eiroz Rodrigues 2018-02-24 16:37:22 UTC
Peter, will you release a new libinput build version with this patch built-in? Or should Canonical apply the patch on the current one?
Comment 9 Peter Hutterer 2018-02-25 22:29:00 UTC
As a general rule, I'm not releasing for every single patchfix, even if it is a crasher on some devices. Canonical should apply the patch for their packages, but the patch will eventually land in 1.10.1 when I get to it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.